--- a/khan-exercises/exercises/expressing_ratios_as_fractions.html
+++ b/khan-exercises/exercises/expressing_ratios_as_fractions.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math math-format word-problems">
 <head>
     <meta charset="UTF-8" />
-    <title>Expressing ratios as fractions</title>
+    <title>Ratio's (verhoudingen) uitdrukken als breuk</title>
     <script src="../khan-exercise.js"></script>
 </head>
 <body>
@@ -16,26 +16,26 @@
 
     <div class="problems">
         <div>
-            <p class="question" data-tt="question1"><var>person(1)</var> has <var>plural( NUM, fruit( 0 ) )</var> for every <var>plural( DENOM, fruit( 1 ) )</var>. Write the ratio of <var>fruit( 0 )</var>s to <var>fruit( 1 )</var>s as a simplified fraction.</p>
+            <p class="question" data-tt="question1"><var>person(1)</var> heeft <var>plural( NUM, fruit( 0 ) )</var> voor elke <var>plural( DENOM, fruit( 1 ) )</var>. Noteer de verhouding van <var>fruit( 0 )</var>s tot <var>fruit( 1 )</var> als een vereenvoudigde breuk.</p>
             <p class="solution" data-type="improper" data-ratio="true"><var>NUM / DENOM</var></p>
         </div>
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">Ratios can be written in a few different ways that mean the same thing.</p>
+        <p data-tt="hint1">Verhoudingen (of ratio\'s) kunnen op verschillende manieren geschreven worden.</p>
         <div>
-            <p data-tt="hint2">You can express a ratio with a colon separating the two numbers.</p>
+            <p data-tt="hint2">Je kunt een verhouding schrijven als twee getallen, gescheiden door een dubbele punt.</p>
             <p><code><var>NUM</var>:<var>DENOM</var></code></p>
         </div>
         <div>
-            <p data-tt="hint3">You can write it out as a phrase like this.</p>
-            <p data-tt="hint4"><code><var>NUM</var> \text{ to } <var>DENOM</var></code></p>
+            <p data-tt="hint3">Je kunt het schrijven in een zin, zoals:</p>
+            <p data-tt="hint4"><code><var>NUM</var> \text{ staat tot } <var>DENOM</var></code></p>
         </div>
         <div>
-            <p data-tt="hint5">Or, you can express a ratio as a fraction.</p>
+            <p data-tt="hint5">Of je kan de verhouding schrijven als een breuk.</p>
             <p><code>\dfrac{<var>NUM</var>}{<var>DENOM</var>}<span data-if="GCD !== 1">=<var>fractionReduce( NUM, DENOM )</var></span></code></p>
         </div>
-        <p data-tt="hint6">Therefore, <code><var>fractionReduce( NUM, DENOM )</var></code> is the ratio of <var>fruit( 0 )</var>s to <var>fruit( 1 )</var>s written as a simplified fraction.</p>
+        <p data-tt="hint6">De verhouding van <code><var>fractionReduce( NUM, DENOM )</var></code> tot <var>fruit( 0 )</var> geschreven als een vereenvoudigde breuk is <var>fruit( 1 )</var>.</p>
     </div>
     </div>
 </body>
