--- a/khan-exercises/exercises/greatest_common_divisor.html
+++ b/khan-exercises/exercises/greatest_common_divisor.html
@@ -35,11 +35,11 @@
             <p data-tt="hint1">De grootste gemene deler is de grootste factor (getal) waar zowel <var>A</var> en <var>B</var>.</p>
             <div>
                 <p data-if="A === 1" data-tt="hint2">De enige factor van 1 is 1.</p>
-                <p data-else data-tt="hint3">De factoren van <var>A</var> are <var>A_FACTORS</var>.</p>
+                <p data-else data-tt="hint3">De factoren van <var>A</var> zijn <var>A_FACTORS</var>.</p>
             </div>
             <div>
                 <p data-if="B === 1" data-tt="hint4">De enige factor van 1 is 1.</p>
-                <p data-else data-tt="hint5">De factoren van <var>B</var> are <var>B_FACTORS</var>.</p>
+                <p data-else data-tt="hint5">De factoren van <var>B</var> zijn <var>B_FACTORS</var>.</p>
             </div>
             <div>
                 <p data-tt="hint6">De grootste gemene deler van <var>A</var> en <var>B</var> is <var>GCD</var>.</p>
