--- a/khan-exercises/exercises/equation_of_a_circle_2.html
+++ b/khan-exercises/exercises/equation_of_a_circle_2.html
@@ -28,7 +28,7 @@
     <div class="problems">
         <div>
             <div class="question">
-                <p data-tt="question1" >The equation of a circle <code>C</code> is
+                <p data-tt="question1" >De vergelijking van een cirkel <code>C</code> is
                     <code><var>expr(["+",
                         "x^2",
                         "y^2",
@@ -37,7 +37,7 @@
                         F === 0 ? null : F
                     ])</var> = 0</code>.</p>
 
-                <p data-tt="question2" >What is its center <code>(h, k)</code> and its radius <code>r</code>?</p>
+                <p data-tt="question2" >Wat is het middelpunt <code>(h, k)</code> en de radius <code>r</code>?</p>
 
             </div>
 
