--- a/khan-exercises/exercises/expressing_ratios_as_fractions.html
+++ b/khan-exercises/exercises/expressing_ratios_as_fractions.html
@@ -22,20 +22,20 @@
     </div>
 
     <div class="hints">
-        <p data-tt="hint1">Ratios can be written in a few different ways that mean the same thing.</p>
+        <p data-tt="hint1">Verhoudingen kunnen op verschillende manieren worden geschreven, maar betekenen hetzelfde.</p>
         <div>
             <p data-tt="hint2">You can express a ratio with a colon separating the two numbers.</p>
             <p><code><var>NUM</var>:<var>DENOM</var></code></p>
         </div>
         <div>
-            <p data-tt="hint3">You can write it out as a phrase like this.</p>
+            <p data-tt="hint3">Zo kun je het opschrijven als een zin.</p>
             <p data-tt="hint4"><code><var>NUM</var> \text{ to } <var>DENOM</var></code></p>
         </div>
         <div>
-            <p data-tt="hint5">Or, you can express a ratio as a fraction.</p>
+            <p data-tt="hint5">Of je kunt een verhouding opschrijven als een breuk.</p>
             <p><code>\dfrac{<var>NUM</var>}{<var>DENOM</var>}<span data-if="GCD !== 1">=<var>fractionReduce( NUM, DENOM )</var></span></code></p>
         </div>
-        <p data-tt="hint6">Therefore, <code><var>fractionReduce( NUM, DENOM )</var></code> is the ratio of <var>fruit( 0 )</var>s to <var>fruit( 1 )</var>s written as a simplified fraction.</p>
+        <p data-tt="hint6">Daarom, <code><var>fractionReduce( NUM, DENOM )</var></code> is de verhouding van <var>fruit( 0 )</var>s tot <var>fruit( 1 )</var>s geschreven als een versimpelde breuk.</p>
     </div>
     </div>
 </body>
