--- a/khan-exercises/exercises/slope_of_a_line.html
+++ b/khan-exercises/exercises/slope_of_a_line.html
@@ -116,10 +116,10 @@
         <div id="show-four-graphs" data-weight="2">
             <div class="vars">
               <var id="COLORS">[
-                { name: "Blue", hex: KhanUtil.BLUE },
-                { name: "Orange", hex: KhanUtil.ORANGE },
-                { name: "Green", hex: KhanUtil.GREEN },
-                { name: "Pink", hex: KhanUtil.PINK }
+                { name: "Blauw", hex: KhanUtil.BLUE },
+                { name: "Oranje", hex: KhanUtil.ORANGE },
+                { name: "Groen", hex: KhanUtil.GREEN },
+                { name: "Roze", hex: KhanUtil.PINK }
                 ]</var>
                 <var id="M_INIT">randRange( 2, 5 )</var>
                 <var id="SLOPES">[
