--- a/khan-exercises/exercises/tabellen_lezen_2.html
+++ b/khan-exercises/exercises/tabellen_lezen_2.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div>
-                    <p>Het ontbrekende getal moet dus het verschil tussen het blauwe en de oranje getallen zijn, oftewel <span class="hint_pink"><var>ANSWER</var></span>.</p>
+                    <p>Het ontbrekende getal moet dus het verschil tussen de blauwe en de oranje getallen zijn, oftewel <span class="hint_pink"><var>ANSWER</var></span>.</p>
                     <div class="graphie">
                         fillInCorrectAnswer( SCHOOL_INDEX, COL_INDEX, ANSWER, KhanUtil.PINK );
                     </div>
