--- a/khan-exercises/exercises/least_common_multiple.html
+++ b/khan-exercises/exercises/least_common_multiple.html
@@ -24,8 +24,8 @@
         <div class="problems">
             <div>
                 <div class="question">
-                    <p data-tt="question1">What is the least common multiple of <var>A</var> and <var>B</var>?</p>
-                    <p data-tt="question2">Another way to say this is:</p>
+                    <p data-tt="question1">Wat is het kleinste gemeenschappelijke veelvoud van <var>A</var> en <var>B</var>?</p>
+                    <p data-tt="question2">We kunnen dat ook zo noteren:</p>
                     <p data-tt="question3"><code>\lcm(<var>A</var>, <var>B</var>) = {?}</code></p>
                 </div>
                 <p class="solution" data-forms="integer"><var>LCM</var></p>
@@ -33,12 +33,12 @@
         </div>
 
         <div class="hints">
-            <p data-tt="hint1">The least common multiple is the smallest number that is a multiple of <var>A</var> and <var>B</var>.</p>
-            <p data-tt="hint2">We know that <var>A</var> x <var>B</var> (or <var>PRODUCT</var>) is a common multiple,
-                but is it the least common multiple?</p>
-            <p data-tt="hint3">Write out the multiples of <var>BIGGER</var> until we find a number divisible by <var>SMALLER</var>.</p>
+            <p data-tt="hint1">Het kleinste gemeenschappelijke veelvoud is het laagste getal dat een meervoud is van <var>A</var> en <var>B</var>.</p>
+            <p data-tt="hint2">We weten dat <var>A</var> x <var>B</var> (of <var>PRODUCT</var>) een gemeenschappelijk veelvoud is,
+                maar is het ook het kleinste gemeenschappelijke veelvoud?</p>
+            <p data-tt="hint3">Schrijf de veelvouden op van <var>BIGGER</var> totdat we een getal vinden dat je kunt delen door <var>SMALLER</var>.</p>
             <span data-each="MULTIPLES as M"> <var>M</var>, </span>
-            <p data-tt="hint4">So, <var>LCM</var> is the least common multiple of <var>A</var> and <var>B</var>.</p>
+            <p data-tt="hint4">Dus, <var>LCM</var> is het kleinste gemeenschappelijke veelvoud van <var>A</var> en <var>B</var>.</p>
         </div>
     </div>
 </body>
