--- a/khan-exercises/exercises/reading_tables_2.html
+++ b/khan-exercises/exercises/reading_tables_2.html
@@ -53,12 +53,11 @@
             return [ enrollments, answer ];
             })()
         </var>
-        <var id="PROBLEM" data-tt="array3">[ "shows the enrollment at four different elementary schools that have 3rd
-            through 5th grade students", "shows the number of chickens sold by four friends from January to March",
-            "indicates the points scored by four players in a charity basketball game", "shows solar panel installations
-            by state during the last fiscal year" ][ INDEX ]</var>
-        <var id="HEADER" data-tt="array4">[ "Schools", "Farmers", "Players", "States" ][ INDEX ]</var>
-        <var id="UNIT" data-tt="array5">[ "students", "chickens", "points", "solar panels" ][ INDEX ]</var>
+        <var id="PROBLEM" data-tt="array3">[ "toont de inschrijving op vier verschillende basisscholen voor leerlingen uit groep 3 t/m 5",
+         "toont het aantal kippen die verkocht zijn door vier vrienden tussen januari en maart",
+            "geeft het aantal punten weer die gescoord zijn door vier spelers in een benefit basketbalwedstrijd", "toont het aantal zonnepanelen per provincie die het afgelopen jaar ge&iuml;nstalleerd zijn" ][ INDEX ]</var>
+        <var id="HEADER" data-tt="array4">[ "scholen", "boeren", "spelers", "provincies" ][ INDEX ]</var>
+        <var id="UNIT" data-tt="array5">[ "studenten", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
         <var id="HINT1" data-tt="array6">
             (function() {
             if ( COL_INDEX === COLUMNS.length - 1 ) {
