--- a/khan-exercises/exercises/reading_tables_2.html
+++ b/khan-exercises/exercises/reading_tables_2.html
@@ -2,7 +2,7 @@
 <html data-translatable data-require="math graphie word-problems">
 <head>
     <meta charset="UTF-8"/>
-    <title>Tabellen lezen 2</title>
+    <title>Reading tables 2</title>
     <script src="../khan-exercise.js"></script>
     <style>
         .reading span {
@@ -26,11 +26,11 @@
 <div class="exercise">
     <div class="vars">
         <var id="INDEX">randRange( 0, 3 )</var>
-        <var id="ROWS" data-tt="array1">[ [ school(1), school(2), school(3), school(4) ], [ persoon(1), persoon(2),
-            persoon(3), persoon(4) ], [ persoon(1), persoon(2), persoon(3), persoon(4) ], [ "Alabama", "Michigan", "New York",
+        <var id="ROWS" data-tt="array1">[ [ school(1), school(2), school(3), school(4) ], [ person(1), person(2),
+            person(3), person(4) ], [ person(1), person(2), person(3), person(4) ], [ "Alabama", "Michigan", "New York",
             "Wyoming" ] ][ INDEX ]</var>
-        <var id="COLUMNS" data-tt="array2">[ [ "3e klas", "4e klas", "5e klas", "Totaal" ], [ "Januari",
-            "Februari", "Maart", "Totaal" ], [ "1e kwart", "2e kwart", "3e kwart", "4e kwart", "Totaal" ], [
+        <var id="COLUMNS" data-tt="array2">[ [ "3rd grade", "4th grade", "5th grade", "Total" ], [ "January",
+            "February", "March", "Total" ], [ "1st Quarter", "2nd Quarter", "3rd Quarter", "4th Quarter", "Final" ], [
             "Q1", "Q2", "Q3", "Q4", "Total" ] ][ INDEX ]</var>
         <var id="COL_INDEX">randRange( 0, COLUMNS.length - 1 )</var>
         <var id="ROW_INDEX">randRange( 0, ROWS.length - 1 )</var>
@@ -57,29 +57,32 @@
             through 5th grade students", "shows the number of chickens sold by four friends from January to March",
             "indicates the points scored by four players in a charity basketball game", "shows solar panel installations
             by state during the last fiscal year" ][ INDEX ]</var>
-        <var id="HEADER" data-tt="array4">[ "Scholen", "Boeren", "Spelers", "Staten" ][ INDEX ]</var>
-        <var id="UNIT" data-tt="array5">[ "leerlingen", "kippen", "punten", "zonnepanelen" ][ INDEX ]</var>
+        <var id="HEADER" data-tt="array4">[ "Schools", "Farmers", "Players", "States" ][ INDEX ]</var>
+        <var id="UNIT" data-tt="array5">[ "students", "chickens", "points", "solar panels" ][ INDEX ]</var>
         <var id="HINT1" data-tt="array6">
             (function() {
             if ( COL_INDEX === COLUMNS.length - 1 ) {
-            return [ "het totaal aantal leerlingen op " + ROWS[ ROW_INDEX ] + " Elementary School", "het totaal aantal kippen verkocht door " + ROWS[ ROW_INDEX ], "het totaal aantal punten behaald door " + ROWS[ ROW_INDEX ], "the
+            return [ "the total number of students at " + ROWS[ ROW_INDEX ] + " Elementary School", "the total number of
+            chickens sold by " + ROWS[ ROW_INDEX ], "the total number of points scored by " + ROWS[ ROW_INDEX ], "the
             total number of solar panels installed in " + ROWS [ ROW_INDEX ] ][ INDEX ];
             } else {
-            return [ "het aantal " + COLUMNS[ COL_INDEX ] + " leerlingen op " + ROWS[ ROW_INDEX ] + " Elementary
-            School", "het aantal kippen verkocht in " + COLUMNS[ COL_INDEX ] + " door " + ROWS[ ROW_INDEX ], "het aantal punten behaald in " + COLUMNS[ COL_INDEX ] + " door " + ROWS[ ROW_INDEX ], "het aantal zonnepanelen
-            geinstalleerd in " + COLUMNS[ COL_INDEX ] + " in " + ROWS[ ROW_INDEX ] ][ INDEX ];
+            return [ "the number of " + COLUMNS[ COL_INDEX ] + " students at " + ROWS[ ROW_INDEX ] + " Elementary
+            School", "the number of chickens sold in " + COLUMNS[ COL_INDEX ] + " by " + ROWS[ ROW_INDEX ], "the number
+            of points scored in the " + COLUMNS[ COL_INDEX ] + " by " + ROWS[ ROW_INDEX ], "the number of solar panels
+            installed in " + COLUMNS[ COL_INDEX ] + " in " + ROWS[ ROW_INDEX ] ][ INDEX ];
             }
             })()
         </var>
-        <var id="HINT2" data-tt="array7">[ "Het totaal aantal leerlingen op " + ROWS[ ROW_INDEX ] + " Basisschool", "Het totaal aantal kippen verkocht door " + ROWS[ ROW_INDEX ], "Het totaal aantal punten behaald door
-            " + ROWS[ ROW_INDEX ], "Het totaal aantal zonnepanelen geinstalleerd in " + ROWS [ ROW_INDEX ] ][ INDEX
+        <var id="HINT2" data-tt="array7">[ "The total number of students at " + ROWS[ ROW_INDEX ] + " Elementary
+            School", "The total number of chickens sold by " + ROWS[ ROW_INDEX ], "The total number of points scored by
+            " + ROWS[ ROW_INDEX ], "The total number of solar panels installed in " + ROWS [ ROW_INDEX ] ][ INDEX
             ]</var>
     </div>
     <div class="problems">
         <div>
-            <p data-tt="hint1">Onderstaande tabel <var>PROBLEM</var> heeft een ontbrekende waarde.</p>
+            <p data-tt="hint1">The table below <var>PROBLEM</var>, except one entry is missing.</p>
 
-            <p class="question" data-tt="hint2">Welk getal moet op de lege plaats in de tabel?</p>
+            <p class="question" data-tt="hint2">What number should go in the empty cell?</p>
 
             <div class="fake_header reading">
                 <span><var>HEADER</var></span><span data-each="COLUMNS as i, column"><var>column</var></span>
@@ -93,11 +96,11 @@
             </div>
 
             <div class="hints">
-                <p data-tt="hint3">In de tabel ontbreekt <var>HINT1</var>.</p>
+                <p data-tt="hint3">The table is missing <var>HINT1</var>.</p>
 
                 <div data-if="COL_INDEX === COLUMNS.length - 1" data-unwrap>
                     <div>
-                        <p data-tt="hint4">In de tabel staan al <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX
+                        <p data-tt="hint4">The table accounts for <span class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX
                             ].slice( 0, COL_INDEX ).join( "+" )</var></span> <var>UNIT</var>.</p>
 
                         <div class="graphie">
@@ -143,9 +146,9 @@
                             });
                         </div>
                     </div>
-                    <p data-tt="hint7">Het ontbrekende getal is het verschil tussen <var>HINT2.slice( 0, 1
+                    <p data-tt="hint7">The missing number must be the difference between <var>HINT2.slice( 0, 1
                         ).toLowerCase() + HINT2.slice( 1 )</var>, <span class="hint_blue"><var>ENROLLMENTS[ ROW_INDEX ][
-                        COLUMNS.length - 1 ]</var></span>, en de waarden die al in de tabel staan, <span
+                        COLUMNS.length - 1 ]</var></span>, and the values already accounted for, <span
                             class="hint_orange"><var>ENROLLMENTS[ ROW_INDEX ][ COLUMNS.length - 1 ] -
                         ANSWER</var></span>.</p>
 
