--- a/khan-exercises/exercises/reading_pictographs_2.html
+++ b/khan-exercises/exercises/reading_pictographs_2.html
@@ -25,8 +25,8 @@
         <var id="DATA">randRangeUnique( 1, 8, 5 )</var>
         <var id="BADGE">randFromArray([ "meteorite", "moon", "earth" ])</var>
         <var id="BADGES">randFromArray([ "meteorite", "moon", "earth" ])</var>
-        <var id="FULL_IMAGE">"&lt;img src='http://www.khanacademy.org/khan-exercises/images/" + BADGE + "-small.png'&gt;"</var>
-        <var id="HALF_IMAGE">"&lt;div style=\"background-image:url('http://www.khanacademy.org/khan-exercises/images/" + BADGE + "-small.png'); width:20px; height:40px;\"&gt;&nbsp;&lt;/div&gt;"</var>
+        <var id="FULL_IMAGE">"&lt;img src='/khan-exercises/images/" + BADGE + "-small.png'&gt;"</var>
+        <var id="HALF_IMAGE">"&lt;div style=\"background-image:url('khan-exercises/images/" + BADGE + "-small.png'); width:20px; height:40px;\"&gt;&nbsp;&lt;/div&gt;"</var>
         <var id="VALUE_PER_IMG">randFromArray([ 2, 4 ])</var>
         <var id="HALF">VALUE_PER_IMG === 1 ? [ 0, 0, 0, 0, 0 ] : [ rand(2), rand(2), rand(2), rand(2), rand(2) ]</var>
     </div>
