--- a/khan-exercises/exercises/distributive_property.html
+++ b/khan-exercises/exercises/distributive_property.html
@@ -18,30 +18,34 @@
             <p class="solution" data-forms="integer"><var>RESULT</var></p>
             <div class="hints">
                 <div>
-                <p data-tt="hint1">Each row has <code><var>B</var> + <var>C</var> = <var>B+C</var></code> rectangles, and there are <code><var>A</var></code> rows.</p>
-                <div class="graphie" id="distrib">
-                    init({
-                        range: [ [ 0, 1 ], [ 0, A ] ],
-                        scale: [ 180, 30 ]
-                    });
-                    rectchart( [ B, C ], [ "#FFA500", "#6495ED" ], A - 1 );
-                    for ( var i = 0; i &lt; A - 1; i++ ) {
-                        rectchart( [ B, C ],  [ "#FFCF22", "#85B7FF" ], i);
-                    }
+                  <p data-tt="hint1">Each row has <code><var>B</var> + <var>C</var> = <var>B+C</var></code> rectangles, and there are <code><var>A</var></code> rows.</p>
+                  <div class="graphie" id="distrib">
+                      init({
+                          range: [ [ 0, 1 ], [ 0, A ] ],
+                          scale: [ 180, 30 ]
+                      });
+                      rectchart( [ B, C ], [ "#FFA500", "#6495ED" ], A - 1 );
+                      for ( var i = 0; i &lt; A - 1; i++ ) {
+                          rectchart( [ B, C ],  [ "#FFCF22", "#85B7FF" ], i);
+                      }
+                  </div>
                 </div>
-                </div>
+                <div>
                 <p style="font-weight: bold" data-tt="hint2">Counting by color:</p>
                 <p data-tt="hint3">Number of orange rectangles: <code><var>A</var> \times <var>B</var> = <var>A * B</var></code></p>
                 <p data-tt="hint4">Number of blue rectangles: <code><var>A</var> \times <var>C</var> = <var>A* C</var></code></p>
                 <p data-tt="hint5">Total number of rectangles: <code><var>A * B</var> + <var>A * C</var> = <var>RESULT</var></code></p>
+                </div>
+                <div>
                 <p style="font-weight: bold" data-tt="hint6">Counting by row:</p>
                 <p data-tt="hint7">Number of rows: <code><var>A</var></code></p>
                 <p data-tt="hint8">Number of rectangles in a row: <code><var>B</var> + <var>C</var> = <var>B + C</var></code></p>
                 <p data-tt="hint9">Total number of rectangles: <code><var>A</var> \times <var>B + C</var> = <var>RESULT</var></code></p>
+                </div>
                 <div>
                 <p data-tt="hint10">Both ways of counting result in the same number, and this is known as the distributive property.</p>
-                <p><code>(<var>A</var> \times <var>B</var>) + (<var>A</var> \times <var>C</var>) = <var>A</var>\times(<var>B</var> + <var>C</var>)</code></p>
                 </div>
+                <p><code>(<var>A</var> \times <var>B</var>) + (<var>A</var> \times <var>C</var>) = <var>A</var>\times(<var>B</var> + <var>C</var>)</code></p>
             </div>
         </div>
         <div id="replace-symbol">
@@ -76,22 +80,26 @@
                     rectchart( [ B, C ],  [ "#FFCF22", "#85B7FF" ], i);
                 }
             </div>
-            <p data-tt="exercise3">There are <code><var>A</var></code> rows, and each row has <code><var>B</var> + <var>C</var> = <var>B+C</var></code> rectangles.</p>
             <p class="solution" data-forms="integer"><var>MISSING</var></p>
             <div class="hints">
+                <p data-tt="exercise3">There are <code><var>A</var></code> rows, and each row has <code><var>B</var> + <var>C</var> = <var>B+C</var></code> rectangles.</p>
+                <div>
                 <p style="font-weight: bold" data-tt="hint11">Counting by color:</p>
                 <p data-tt="hint12">Number of orange rectangles: <code><var>A</var> \times <var>B</var> = <var>A * B</var></code></p>
                 <p data-tt="hint13">Number of blue rectangles: <code><var>A</var> \times <var>C</var> = <var>A* C</var></code></p>
                 <p data-tt="hint14">Total number of rectangles: <code><var>A * B</var> + <var>A * C</var> = <var>RESULT</var></code></p>
+                </div>
+                <div>
                 <p style="font-weight: bold" data-tt="hint15">Counting by row:</p>
                 <p data-tt="hint16">Number of rows: <code><var>A</var></code></p>
                 <p data-tt="hint18">Number of rectangles in a row: <code><var>B</var> + <var>C</var> = <var>B + C</var></code></p>
                 <p data-tt="hint19">Total number of rectangles: <code><var>A</var> \times <var>B + C</var> = <var>RESULT</var></code></p>
+                </div>
                 <div>
                 <p data-tt="hint10">Both ways of counting result in the same number, and this is known as the distributive property.</p>
                 <p><code>(<var>A</var> \times <var>B</var>) + (<var>A</var> \times <var>C</var>) = <var>A</var>\times(<var>B</var> + <var>C</var>)</code></p>
-                <p data-tt="hint21">Thus the symbol <code><var>SYMBOL</var></code> could be replaced with <code><var>MISSING</var></code>.</p>
                 </div>
+                <p data-tt="hint21">Thus the symbol <code><var>SYMBOL</var></code> could be replaced with <code><var>MISSING</var></code>.</p>
             </div>
         </div>
     </div>
