--- a/javascript/profile-package/badges_test.html
+++ b/javascript/profile-package/badges_test.html
@@ -97,7 +97,7 @@ KA_TEST.loadTemplates([
 Name: <input id="name"><br>
 Desc: <input id="desc"><br>
 Type(Meteorite|moon|earth): <input id="type" value="moon"><br>
-<button onclick="addBadge()">Add Badge</button>
+<button onclick="addBadge()">Badge toevoegen</button>
 </div>
 </body>
 </html>
