--- a/khan-exercises/exercises/division_1.html
+++ b/khan-exercises/exercises/division_1.html
@@ -36,7 +36,7 @@
                             drawRow( B, A - 1 - i, "#6495ED", B * i + 1 );
                         }
                     </div>
-                    <p data-tt="hint1">Draw <var>C</var> circles, with <var>B</var> to each row.</p>
+                    <p data-tt="hint1">Teken <var>C</var> cirkels, met in elke rij <var>B</var> cirkels.</p>
                 </div>
                 <div>
                     <div class="graphie" data-update="numbers">
@@ -47,11 +47,11 @@
                             path ( [ [ - 0.5 , i - 0.5 ], [ B - 0.5 , i - 0.5 ] ]);
                         }
                     </div>
-                    <p data-tt="hint2">How many rows are there?</p>
+                    <p data-tt="hint2">Hoeveel rijen zijn er?</p>
                 </div>
             </div>
             <p data-else data-tt="hint3">
-                Dividing any number by 1 equals itself.
+                Elk getal gedeeld door 1 is gelijk aan het getal zelf.
             </p>
             <div class="graphie" data-update="numbers">
                 KhanUtil.currentGraph.labelHolder.remove();
