--- a/khan-exercises/exercises/areas_of_circles_and_sectors.html
+++ b/khan-exercises/exercises/areas_of_circles_and_sectors.html
@@ -28,7 +28,7 @@
             <div class="problems">
                 <div id="Ac-angle-to-As">
                     <p class="problem">Een cirkel met een oppervlakte van <code class="hint_blue"><var>PRETTY_A_C</var></code> heeft een <span class="hint_orange">sector</span> met een middelpuntshoek van <code class="hint_purple"><var>ANGLE</var>^\circ</code>.</p>
-                    <p class="question">Hoe groot is de oppervlakte van de sector?</p>
+                    <p class="question">Hoe groot is de oppervlakte van de sector? (afronden tot 3 decimalen achter de komma)</p>
                     <div class="graphie" id="circle">
                         init({
                             range: [[-R - 2, R + 2], [-R - 2, R + 2]],
