--- a/khan-exercises/exercises/markup_and_commission_word_problems.html
+++ b/khan-exercises/exercises/markup_and_commission_word_problems.html
@@ -48,16 +48,16 @@
             </div>
             <div class="question spin">
                 <p>De manager van <var>person(1)</var>'s Meubel Winkel probeert uit te rekenen hoeveel hij kan berekenen voor een stoel die net is binnengekomen. 
-                Als de stoel was gekocht voor een inkoopprijs van &euro;<var>WHOLESALE</var> en <var>person(1)</var> heeft een winstmarge op alle meubels van <var>MARKUP_RATE</var>%, voor welke prijs zou de manager de stoel moeten verkopen?
+                Als de stoel was gekocht voor een inkoopprijs van &euro;<var>WHOLESALE</var> en <var>person(1)</var> heeft een brutowinstmarge op alle meubels van <var>MARKUP_RATE</var>%, voor welke prijs zou de manager de stoel moeten verkopen?
             </div>
             <p class="solution" data-forms="dollar"><var>RETAIL_PRICE</var></p>
             <div class="hints">
                 <div>
-                    <p>Om de verkoopprijs te weten moeten we eerst de winstmarge berekenen. Bedenk dat de winstmarge een percentage is van de inkoopprijs die de winkel daarbij optelt om de verkoopprijs te bepalen. Met deze kennis kunnen we de volgende berekening opzetten:</p>
-                    <p><span class="hint_blue">winstmarge </span> <code>\times</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_purple">winst</span></p>
+                    <p>Om de verkoopprijs te weten moeten we eerst de brutowinstmarge berekenen. Bedenk dat de brutowinstmarge een percentage is van de inkoopprijs die de winkel daarbij optelt om de verkoopprijs te bepalen. Met deze kennis kunnen we de volgende berekening opzetten:</p>
+                    <p><span class="hint_blue">brutowinstmarge </span> <code>\times</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_purple">winst</span></p>
                 </div>
                 <div>
-                    <p>Omdat de winstmarge een percentage is moeten we die eerst omzetten in een decimaal getal. Procent betekent honderdste deel, dus  <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
+                    <p>Omdat de brutowinstmarge een percentage is moeten we die eerst omzetten in een decimaal getal. Procent betekent honderdste deel, dus  <code class="hint_blue"><var>MARKUP_RATE</var>\%</code> is gelijk aan <code class="hint_blue">\displaystyle\frac{<var>MARKUP_RATE</var>}{100}</code> wat ook gelijk is aan <code class="hint_blue"><var>MARKUP_RATE</var> \div 100</code>.</p>
                     <p><code class="hint_blue"><var>MARKUP_RATE</var> \div 100 = <var>(MARKUP_RATE/100).toFixed(2)</var></code>
                 </div>
                 <div>
@@ -65,7 +65,7 @@
                     <p><code class="hint_blue"><var>(MARKUP_RATE/100).toFixed(2)</var></code> <code>\times</code> <code class="hint_green">&euro;<var>WHOLESALE.toFixed(2)</var></code> <code>=</code> <code class="hint_purple">&euro;<var>TOTAL_MARKUP</var></code></p>
                 </div>
                 <div>
-                    <p>Omdat de winstmarge een percentage is van de inkoopprijs kunnen we de verkoopprijs vinden met de volgende berekening:</p>
+                    <p>Omdat de brutowinstmarge een percentage is van de inkoopprijs kunnen we de verkoopprijs vinden met de volgende berekening:</p>
                     <p><span class="hint_purple">winst</span> <code>+</code> <span class="hint_green">inkoopprijs</span> <code>=</code> <span class="hint_pink">verkoopprijs</span></p>
                 </div>
                 <div>
