--- a/khan-exercises/exercises/reading_line_charts_1.html
+++ b/khan-exercises/exercises/reading_line_charts_1.html
@@ -8,7 +8,7 @@
 <body>
     <div class="exercise">
     <div class="vars">
-        <var data-tt="weekdays" id="DAYS">[ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday" ]</var>
+        <var data-tt="weekdays" id="DAYS">[ "Maandag", "Dinsdag", "Woensdag", "Donderdag", "Vrijdag", "Zaterdag", "Zondag" ]</var>
         <var id="INDEX">randRange( 0, DAYS.length - 1 )</var>
         <var id="VALUES">shuffle( [2, 3, 4, 5, 6, 7, 8, 9, 10 ], DAYS.length )</var>
         <var id="DATA">
