--- a/khan-exercises/exercises/axis_of_symmetry.html
+++ b/khan-exercises/exercises/axis_of_symmetry.html
@@ -11,7 +11,7 @@
                 <var id="SYM">randRange( 0, 1 )</var>
                 <var id="SIDES">randRange( 3, 8 )</var>
                 <var id="SIDE">randRange( 0, SIDES - 1 )</var>
-                <var id="ANSWER">SYM ? "Yes" : "No"</var>
+                <var id="ANSWER">SYM ? "Ja" : "Nee"</var>
             </div>
 
     <div class="problems">
