--- a/khan-exercises/exercises/nieuwe_getallen_op_de_getallenlijn.html
+++ b/khan-exercises/exercises/nieuwe_getallen_op_de_getallenlijn.html
@@ -12,7 +12,7 @@
         <var id="UPPER_BOUND">1</var>
         <var id="SCALING_FACTOR">5</var>
 
-        <var id="DENOMINATOR">randRange(7, 10)</var>
+        <var id="DENOMINATOR">randRange(2, 10)</var>
         <var id="NUMERATOR">1</var>
 
         <var id="LOWER_SCALED">LOWER_BOUND * DENOMINATOR</var>
@@ -24,10 +24,11 @@
         <div>
             <div class="question">
                 <p data-tt="question1">Verplaats de <strong><code>\color{orange}{\text{oranje stip}}</code></strong> naar   <strong><code>\color{orange}{<var>fraction(NUMERATOR, DENOMINATOR)</var>}</code></strong> op de getallenlijn.</p>
-                <div class="graphie" id="number-line">
+                <!-- <p> De var UPPER_SCALED is: <var>UPPER_SCALED</var></p> -->
+				<div class="graphie" id="number-line">
                     init({
                         range: [ [LOWER_SCALED - 1, UPPER_SCALED + 1], [-1, 1] ],
-                        scale: [80, 40]
+                        scale: [80-4*UPPER_SCALED, 40]
                     });
 
                     style({arrows: "&gt;"});
@@ -67,7 +68,7 @@
                         line( [ 0, 0 ], [ NUMERATOR, 0 ] );
                         movablePoint.visibleShape.toFront();
                     </div>
-                    <p data-tt="hint3">De oranje stip moet <span class="hint_blue"><code><strong><var>NUMERATOR</var></strong></code></span> stuk<var>plural(NUMERATOR)</var> verschoven worden, want <code><var>fraction(NUMERATOR, DENOMINATOR)</var> = <var>NUMERATOR</var>*<var>fraction(1, DENOMINATOR)</var></code></p>
+                    <p data-tt="hint3">De oranje stip moet <span class="hint_blue"><code><strong><var>NUMERATOR</var></strong></code></span> stukje<var>plural(NUMERATOR)</var> naar rechts verschoven worden.</p>
                 </div>
                 <div>
                     <div class="graphie" data-update="number-line">
