--- a/khan-exercises/exercises/angle_types.html
+++ b/khan-exercises/exercises/angle_types.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
 
-            <div class="solution" data-tt="solution1">Acute</div>
+            <div class="solution" data-tt="solution1">Scherp</div>
             <ul class="choices" data-category="true">
                 <li data-tt="list1">Acute</li>
                 <li data-tt="list2">Right</li>
@@ -76,7 +76,11 @@
             </div>
 
             <div class="solution" data-tt="solution2">Recht</div>
-
+ 	<ul class="choices" data-category="true">
+                <li data-tt="list1">Acute</li>
+                <li data-tt="list2">Right</li>
+                <li data-tt="list3">Obtuse</li>
+            </ul>
             <div class="hints">
                 <div class="graphie" data-update="angle">
                     graph.protractor.moveTo( 0, 0 );
@@ -97,8 +101,12 @@
                 <var id="DIFF">randRange(110, 160)</var>
             </div>
 
-            <div class="solution" data-tt="solution3">Obtuse</div>
-
+            <div class="solution" data-tt="solution3">Stomp</div>
+	 <ul class="choices" data-category="true">
+                <li data-tt="list1">Acute</li>
+                <li data-tt="list2">Right</li>
+                <li data-tt="list3">Obtuse</li>
+            </ul>
             <div class="hints">
                 <div class="graphie" data-update="angle">
                     graph.protractor.moveTo( 0, 0 );
