--- a/khan-exercises/exercises/angle_types.html
+++ b/khan-exercises/exercises/angle_types.html
@@ -76,7 +76,11 @@
             </div>
 
             <div class="solution" data-tt="solution2">Recht</div>
-
+ 	<ul class="choices" data-category="true">
+                <li data-tt="list1">Acute</li>
+                <li data-tt="list2">Right</li>
+                <li data-tt="list3">Obtuse</li>
+            </ul>
             <div class="hints">
                 <div class="graphie" data-update="angle">
                     graph.protractor.moveTo( 0, 0 );
@@ -98,7 +102,11 @@
             </div>
 
             <div class="solution" data-tt="solution3">Stomp</div>
-
+	          <ul class="choices" data-category="true">
+                <li data-tt="list1">Acute</li>
+                <li data-tt="list2">Right</li>
+                <li data-tt="list3">Obtuse</li>
+            </ul>
             <div class="hints">
                 <div class="graphie" data-update="angle">
                     graph.protractor.moveTo( 0, 0 );
