Oefening Congruente driehoeken 2 vertaald

--- a/khan-exercises/exercises/congruent_triangles_2.html
+++ b/khan-exercises/exercises/congruent_triangles_2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="exercise">
         <div data-tt="question1" class="problem">
-            What is the value of the angle x?
+            Wat is de waarde van hoek x?
         </div>
         <div class="vars">
             <var id="RAND_ANG">randRange( 0, 2 )</var>
@@ -64,11 +64,11 @@
                     <var id="ANSWER">TR_B.angles[ ANG_LEFT ]</var>
                 </div>
                 <div class="hints">
-                    <p data-tt="hint1" >These two triangles have three sides equal (they share one of them).</p>
-                    <p data-tt="hint2" >Therefore they are congruent.</p>
-                    <p data-tt="hint3" >Congruent triangles also have congruent (equal) angles.</p>
-                    <p data-tt="hint4" >If we superimpose these two triangles, by rotating triangle ABC, we see that angle x corresponds to angle <var>ANGLE_LABELS[ ANG_LEFT ]</var></p>
-                    <p data-tt="hint5" >Angle x is therefore equal to <var>ANSWER</var>.</p>
+                    <p data-tt="hint1" >Deze twee driehoeken hebben drie gelijke zijden (waarvan ze er een delen).</p>
+                    <p data-tt="hint2" >Daarom zijn het congruente driehoeken.</p>
+                    <p data-tt="hint3" >Congruente driehoeken hebben ook congruente (gelijke) hoeken.</p>
+                    <p data-tt="hint4" >Als we deze driehoeken op elkaar plaatsen, door driehoek ABC te draaien, zien we dat hoek x gelijk is aan hoek <var>ANGLE_LABELS[ ANG_LEFT ]</var></p>
+                    <p data-tt="hint5" >Hoek x is daarom gelijk aan <var>ANSWER</var>.</p>
                 </div>
             </div>
 
@@ -81,10 +81,10 @@
                 </div>
                 <div class="solution"><var>TR_B.angles[ ANG_LEFT ]</var></div>
                 <div class="hints">
-                    <p data-tt="hint6" >These two triangles have three sides equal (they share one of them).</p>
-                    <p data-tt="hint7" >Therefore they are congruent.</p>
-                    <p data-tt="hint8" >Congruent triangles also have congruent (equal) angles.</p>
-                    <p data-tt="hint9" >If we superimpose these two triangles, by rotating triangle ABC, we see that angle x corresponds to angle <var>ANGLE_LABELS[ ANG_LEFT ]</var>.</p>
+                    <p data-tt="hint6" >Deze twee driehoeken hebben drie gelijke zijden (waarvan ze er een delen).</p>
+                    <p data-tt="hint7" >Daarom zijn het congruente driehoeken.</p>
+                    <p data-tt="hint8" >Congruente driehoeken hebben ook congruente (gelijke) hoeken.</p>
+                    <p data-tt="hint9" >Als we deze driehoeken op elkaar plaatsen, door driehoek ABC te draaien, zien we dat hoek x gelijk is aan hoek <var>ANGLE_LABELS[ ANG_LEFT ]</var>.</p>
                     <p><code><var>ANGLE_LABELS[ ANG_LEFT ]</var> = 180 - <var>TR_A.angles[ ANG_FIRST[ 0 ] ]</var> -  <var>TR_A.angles[ ANG_FIRST[ 1 ] ]</var></code></p>
                     <div>
                         <p><code><var>ANGLE_LABELS[ ANG_LEFT ]</var> = x = <var>TR_B.angles[ ANG_LEFT ]</var></code></p>
@@ -163,10 +163,10 @@
                 </div>
                 <div class="solution"><var>ANSWER</var></div>
                 <div class="hints">
-                    <p data-tt="hint10" >These two triangles have two sides and an angle equal.</p>
-                    <p data-tt="hint11" >Therefore they are congruent.</p>
-                    <p data-tt="hint12" >Congruent triangles also have congruent (equal) angles.</p>
-                    <p data-tt="hint13" >If we superimpose these two triangles, by flipping triangle <code>EDA</code>, we see that angle x corresponds to angle <var>ANGLE_LABELS[ SHOW_ANGLE ]</var></p>
+                    <p data-tt="hint10" >Deze twee driehoeken hebben twee gelijke zijden en een gelijke hoek.</p>
+                    <p data-tt="hint11" >Daarom zijn het congruente driehoeken.</p>
+                    <p data-tt="hint12" >Congruente driehoeken hebben ook congruente (gelijke) hoeken.</p>
+                    <p data-tt="hint13" >Als we deze driehoeken op elkaar plaatsen, door driehoek <code>EDA</code> te draaien, zien we dat hoek x gelijk is aan hoek <var>ANGLE_LABELS[ SHOW_ANGLE ]</var></p>
                     <div data-if="! SAME_ANGLE">
                         <p><code><var>ANGLE_LABELS[ SHOW_ANGLE ]</var> = 180 - <var>TR_A.angles[ ANG_FIRST[ 0 ] ]</var> -  <var>TR_A.angles[ ANG_FIRST[ 1 ] ]</var></code></p>
                         <div>
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                     </div>
-                    <p data-tt="hint14" >Angle x is therefore equal to <var>ANSWER</var></p>
+                    <p data-tt="hint14" >Hoek x is daarom gelijk aan <var>ANSWER</var></p>
                 </div>
             </div>
         </div>
