--- a/khan-exercises/exercises/absolute_value.html
+++ b/khan-exercises/exercises/absolute_value.html
@@ -45,8 +45,8 @@
             circle( [ originX, 0 ], 0.10 );
             graph.pt.toFront();
         </div>
-        <p data-tt="hint1">The distance from <code>0</code> to <code><var>SIGN + INT + FRAC</var></code> is <code><var>INT + FRAC</var></code>, which equals the absolute value.</p>
-        <p data-tt="hint2" data-if="SIGN !== &quot;&quot;">In other words, <code><var>INT + FRAC</var></code> is the non-negative version of <code><var>SIGN + INT + FRAC</var></code>.</p>
+        <p data-tt="hint1">De afstand van <code>0</code> tot <code><var>SIGN + INT + FRAC</var></code> is <code><var>INT + FRAC</var></code>, wat gelijk is aan de absolute waarde.</p>
+        <p data-tt="hint2" data-if="SIGN !== &quot;&quot;">Met andere woorden, <code><var>INT + FRAC</var></code> is de niet-negatieve versie van <code><var>SIGN + INT + FRAC</var></code>.</p>
     </div>
     </div>
 </body>
